docs: mark Phase 0 done; document joxette.clustering.mode
Phase 0 prerequisites are complete: the container image (31bcbe3) and Pekko
Management Track B clustering (9a9bfa7). Rewrite operator-design.md §8 from
"to build" to "implemented", documenting the clustering.mode config, the HOCON
overlay, and the M1 version pinning. Update clustering-deployment.md limitation
#1 and the config reference to cover the new pekko-management mode.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>